# map-to-glb

./: .env.example  .gitignore  LICENSE  README.md  agent-manifest.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml  pages.yml
.understand-anything/: knowledge-graph.json  meta.json
docs/: agent-runtime.md  index.html
notebooks/: mapglb_colab_server.py  mapglb_kaggle_server.py
src/: global.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: custom.nsi
src-tauri/src/: main.rs
src/components/: AppOnlyGate.tsx  FullscreenModal.tsx
src/components/button/: BottomButton.tsx
src/components/gpu/: ProviderCard.tsx  ProviderSelector.tsx
src/components/map/: Processing.tsx  SearchApiButton.tsx  SelectMap.tsx
src/components/modal/: Modal.tsx
src/components/nav/: TopNav.tsx
src/data/: bangladeshLocations.ts
src/providers/: colab.ts  custom.ts  index.ts  kaggle.ts  lightning.ts  modal.ts  paperspace.ts  registry.ts  runpod.ts  types.ts  vastai.ts
src/services/: buildingImageFetcher.ts  octocodeService.ts  searchApis.ts
src/state/: areaStore.ts  exportStore.ts  runtimeStore.ts  sceneStore.ts
src/three/: Car.tsx  Space.tsx
src/ui/: App.tsx
src/utils/: appDistribution.ts  cookie.ts  deviceBrain.ts  locationMemory.ts  remoteCompute.ts  requestCache.ts
tools/: mapglb-cli-adapter-server.mjs  mapglb-cli.mjs  mapglb-mcp.mjs  nsis-patch.js
