[package]
name = "map-to-glb"
version = "2.0.0"
description = "Map to GLB - Generate real-world 3D maps as GLB files using OpenStreetMap data"
authors = ["Farhan Dhrubo <https://github.com/farhanic017>"]
license = "GPL-3.0"
repository = "https://github.com/farhanic017/map-to-glb"
default-run = "map-to-glb"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-read-file", "fs-write-file", "path-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Memory-optimized release profile (stays under 2.4GB RAM during build)
[profile.release]
opt-level = "s"      # Optimize for size (uses less memory than speed optimization)
lto = true           # Link-time optimization (slower build, less memory)
codegen-units = 1    # Single codegen unit (slower but uses less RAM)
debug = false        # No debug symbols (saves memory)
strip = true         # Strip symbols (saves memory)
panic = "abort"      # Abort on panic (smaller binary)
